--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,9 +1,32 @@
+{%extends 'music/base.html'%}
+<title>{%block title%}Album Detail{%endblock%}</title>
+{%block body%}
 <img src="{{album.album_logo}}">
 <h1>{{album.album_title}}</h1>
 <h3>{{album.artist}}</h3>
-<ul>
+<!--<ul>
     {%for song in album.song_set.all%}
     <li>{{song.song_title}}-{{song.file_type}}</li>
     {%endfor%}
 </ul>
-{{album}}
+{{album}}-->
+
+{% if error_message %}
+    <p><strong>{{error_message}}</strong></p>
+{% endif%}
+
+<form action="{% url 'music:favorite' album.id%}" method="POST">
+    {% csrf_token %}
+    {% for song in album.song_set.all %}
+        <input type="radio" id="song{{forloop.counter}}" name="song" value="{{song.id}}"/>
+        <label for="song{{forloop.counter}}">
+            {{song.song_title}}
+            {% if song.is_favorite %}
+                <img src="http://i.imgur.com/b9b13Rd.png"
+            {% endif %}
+        </label><br>
+        
+    {% endfor%}
+    <input type="submit" value="Favorite">
+</form>
+{%endblock%}
