--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,13 +1,8 @@
-{% if all_albums%}
-    <h3>Here alll the complete albums</h3>
+{% extends 'music/base.html' %}
+
+{% block body %}
     <ul>
-        {%for album in all_albums%}
+    {%for album in all_albums%}
         <li><a href="{% url 'music:detail' album.id%}">{{album.album_title}}</a></li>
-        {%endfor%}
-        
-    </ul>
-{%else%}
-    <h3>
-        You don't have any albums
-    </h3>
-{% endif%}
+    {%endfor%}
+{% endblock %}
